Fix icon alignment issue

--- a/app/webpacker/styles/components/checklist-collage.scss
+++ b/app/webpacker/styles/components/checklist-collage.scss
@@ -37,7 +37,7 @@
         position: absolute;
         margin-left: -4rem;
         border: solid 4px $black;
-        top: 7px;
+        top: -5px;
       }
     }
   }
